<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.privy.energy.RegionSelectionActivity">

    <TextView
        android:id="@+id/tv_provider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/provider"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"/>
        <!--android:textColor="@android:color/black" />-->

    <Spinner
        android:id="@+id/locationSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp" />
        <!--android:backgroundTint="@android:color/black"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:onClick="phaseSelect">

            <RadioButton
                android:id="@+id/onePhase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="phaseSelect"
                android:text="@string/singlePhase"/>
                <!--android:buttonTint="@android:color/holo_blue_dark"/>-->

            <RadioButton
                android:id="@+id/threePhase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/threePhase"
                android:onClick="phaseSelect"/>
                <!--android:buttonTint="@android:color/holo_blue_dark"-->
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:id="@+id/next_button_layout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="clickedNext"
            android:text="@string/next"
            android:id="@+id/button_next"/>
            <!--android:textColor="@android:color/white"/>-->
    </LinearLayout>

</LinearLayout>
