<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.privy.energy.FareCalcActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_charges_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/totalCharges"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_charges"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="6dp">

                <TextView
                    android:id="@+id/tv_device_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/deviceText"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_time_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/timeText"
                    android:textStyle="bold" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/device_list">

                </TableLayout>


                <!--
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="20dp">

                    <TextView
                        android:id="@+id/tv_device_name"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Devices"
                        android:textSize="16sp" />
                    <View
                        android:layout_width="3dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@android:color/darker_gray"/>

                    <TextView
                        android:id="@+id/tv_device_time"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Time (in Hours)"
                        android:textSize="16sp" />
                </LinearLayout>
                -->


            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/tv_device"
                    android:layout_width="0dp"
                    android:layout_height="40sp"
                    android:layout_weight="1"
                    android:hint="@string/deviceHint"
                    android:imeOptions="actionDone"
                    android:inputType="textCapCharacters"/>
                    <!--android:backgroundTint="#1565C0"/>-->

                <EditText
                    android:id="@+id/et_time"
                    android:layout_width="0dp"
                    android:layout_height="40sp"
                    android:layout_weight="1"
                    android:hint="@string/timeHint"
                    android:inputType="numberDecimal" />
                <!--android:backgroundTint="#1565C0"-->
            </LinearLayout>

            <Button
                android:id="@+id/button_add_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addDevice"
                android:onClick="addList"/>
                <!--android:textColor="@android:color/white" />
                android:backgroundTint="#1565C0"-->

            <Button
                android:id="@+id/button_clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="clearData"
                android:text="@string/clearButton"/>
                <!--android:textColor="@android:color/white" />
                android:backgroundTint="#1565C0"-->
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
