<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.privy.energy.AboutActivity"
    android:padding="15dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/companylogo"
                    android:layout_weight="1"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0.001"
                android:paddingEnd="60dp"
                android:paddingStart="10dp"
                android:text="@string/EnErgy"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="60dp"
                android:paddingStart="30dp"
                android:text="@string/Version"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_weight="0.001"
                android:paddingEnd="60dp"
                android:paddingStart="10dp"
                android:text="@string/address"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
